<resources>
    <string name="app_name">Kirana</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="signup">Sign Up</string>
    <string name="reenter_password">Re-enter Password</string>

    <string name="shop_type">Shop Type</string>

    <!--Drawer Area -->

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Indian Food</item>
        <item >Chinese Food</item>
        <item >French Food</item>
        <item >Italian Food</item>
        <item >Our Specials</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- End of Drawer Area-->

    <string-array name="shop_type">
        <item>Hotel</item>
        <item>Grocery Shop</item>
    </string-array>
</resources>
